-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
6aed5f4fb (dev), e3e84b2fb (6.5)
Despite the fact that using properties starting with "on" might not be very wise, it is not forbidden and correctly handled during runtime.
Compiler and runtime seem to disagree about signal vs property when interpreting
import QtQuick Window { id: root width: 640 height: 480 visible: true title: "Foo" Switch { onLabel: qsTr("Power on") } }
, though. The compiler claims
Warning: main.qml:11:9: no matching signal found for handler "onLabel" [unqualified] onLabel: qsTr("Power on") ^^^^^^^
, but the signal would be have been named onOnLabel instead.
For Gerrit Dashboard: QTBUG-109021 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
446024,9 | QmlCompiler: Fix signal checking in import visitor | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
449128,4 | QmlCompiler: Fix signal checking in import visitor | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |