tests/auto/qml/qmllint/data/Switch.qml
@@ -1,0 +1,6 @@
+import QtQml
+
+QtObject {
+    id: control
+    property alias onLabel: control.objectName
+}
