tests/auto/qml/qmllint/data/switcher.qml
@@ -1,0 +1,5 @@
+import QML
+
+Switch {
+    onLabel: qsTr("Power on")
+}
